name:                grid-pathfinding
version:             0.1.0.0
synopsis:            Pathfinding in a grid
homepage:            https://github.com/qsctr/grid-pathfinding
license:             MIT
author:              Bretton
build-type:          Simple
cabal-version:       >=1.10

executable grid-pathfinding
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Grid
                     , Searches
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , gloss
                     , pqueue
  ghc-options:         -Wall -threaded -O2